--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: docker login
+        uses: docker/login-action@v1
+        with:
+          username: robot-goreleaser+github-actions
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.fylr.io
+
       - name: Login to Container Registry
         uses: docker/login-action@v2
         with:
