--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: docker login
+      - name: docker login (harbor)
         uses: docker/login-action@v1
         with:
           username: robot-goreleaser+github-actions
           password: ${{ secrets.DOCKER_PASSWORD }}
           registry: docker.fylr.io
+
+      - name: docker login (new registry)
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.FYLR_DOCKER_REGISTRY_2_LOGIN }}
+          password: ${{ secrets.FYLR_DOCKER_REGISTRY_2_PASSWORD }}
+          registry: docker-push.fylr.io
 
       - name: Extract tag version
         run: echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
